--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<article id="work">
 								<h2 class="major">Services</h2>
 								<p>
-									<b>FULL LAWN MAINTENANCE</b><br>
+									<b>LANDSCAPING</b><br>
 									+ Lawn Service<br>
 									+ Mowing<br>
 									+ Trimming<br>
@@ -58,7 +58,7 @@
 									+ Fertilizing<br>
 									+ Storm clean up<br><br>
 
-									<b>LANDSCAPE DESIGN</b><br>
+									<b>IRRIGATION</b><br>
 									+ Planting<br>
 									+ Irrigation<br>
 									+ Garden installation<br>
@@ -96,14 +96,10 @@
 										</div>
 									</div>
 									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
+										<li><input type="submit" value="Send Message" class="primary"/></li>
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
 
