--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
 							<div class="inner">
 								<h2>Affordable Landscaping & Irrigation Services in Honolulu</h2>
 								<p>Specialty Lawn Care & Maintenance in Honolulu, HI. Call today for a free estimate <b>(808) 465-8861</b></p>
-								<button><a href="#contact">BOOK NOW</a></button>
+								<button>
+									<a href="#contact">Book Now</a>
+								</button>
 							</div>
 						</div>
 						<nav>
 							<ul>
 								<li><a href="#intro">About</a></li>
 								<li><a href="#work">Services</a></li>
-								<li><a href="#about">Estimate</a></li>
+								<li><a href="#about">Photos</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -40,7 +42,12 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
+								<p>
+								Carcamo Landscaping is an irrigation and landscape company based in Honolulu, Hawaii.
+								We are a small dedicated team that can help you with your daily lawn needs and maintenance.
+								Our focus is on detail, care, and good craftsmanship. <br>
+								Click <a href=#services>here</a> to learn more about our services.
+								</p>
 							</article>
 
 						<!-- Work -->
@@ -49,37 +56,33 @@
 								<h2 class="major">Services</h2>
 								<p>
 									<b>LANDSCAPING</b><br>
-									+ Lawn Service<br>
+									+ Artificial Turf Installation<br>
 									+ Mowing<br>
 									+ Trimming<br>
+									+ Irrigation Installation<br>
 									+ Weeding<br>
-									+ Leaf and debris removal<br>
+									+ Tree and debris removal<br>
+									+ Yard Cleaning<br>
 									+ Pest control<br>
 									+ Fertilizing<br>
-									+ Storm clean up<br><br>
-
-									<b>IRRIGATION</b><br>
-									+ Planting<br>
-									+ Irrigation<br>
-									+ Garden installation<br>
-									+ Paver installation<br>
-									+ Lighting<br>
-									+ Soil conditioning<br>
+									+ Lawn Maintenance<br>
 								</p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
-								<h2 class="major">About</h2>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<h2 class="major">Photos</h2>
+								<p> 
+									Coming soon!
+								</p>
 							</article>
 
 						<!-- Contact -->
-							<article id="contact">
+							<article id="contact"><center>
 								<h2 class="major">Contact</h2>
 								<p>Call today for a free estimate (808) 465-8861</p>
 								<p>carcamolandscapinghawaii@gmail.com
-								</p>
+								</p><!--
 								<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
@@ -100,8 +103,10 @@
 									</ul>
 								</form>
 								<ul class="icons">
-								</ul>
-							</article>
+								</ul> -->
+							</center>
+							</article> 
+				
 
 						<!-- Elements -->
 							<article id="elements">
